2005-08-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/context-def.cc (instantiate): check for
	Engraver_group_engraver and Performer_group_performer not
	Engraver/Performer. Fixes crashes when doing \with { \consist .. }
 
2005-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/les-nereides.ly: Remove three fingering tweaks, update
	remaining one.

	* input/regression/slur-script-inside.ly: Update, fix doc.

	* scm/script.scm: Update to avoid-slur.

	* scm/define-grob-properties.scm (avoid-slur): New property.

	* lily/phrasing-slur-engraver.cc (acknowledge_extra_object):
	* lily/slur-engraver.cc (acknowledge_extra_object): Invoke
	outside_slur_callback if avoid-slur != #'inside.

	* scm/define-grobs.scm (Fingering, Textscript): No
	inside-slur/outside-slur preference.
	(DynamicLineSpanner): Always outside slur.

	* input/regression/slur-script.ly: More tests.

2005-08-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/lilypond-book: fix notime entry.

	* Documentation/user/advanced-notation.itely: add info on
	getting an I rehearsal mark.

	* Documentation/user/putting.itely: reinstate "I", re-enforce
	the fact that \override numbers are the result of
	experimentation and personal taste.

	* Documentation/user/invoking.itely: update convert-ly bugs.

2005-08-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): set timing
	to #t.

	* lily/timing-translator.cc (initialize): don't initialize timing.

	* input/regression/stem-spacing.ly (Module): remove file.

	* input/regression/spacing-stick-out.ly: specify Score context for
	\override

	* input/regression/clefs.ly: remove spurious {}s 

2005-08-17  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/NEWS.tely,
	input/regression/repeat-percent-count.ly: clarify a bit.

2005-08-16  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* input/no-notation/display-lily-tests.ly: delete
	display-lily-init call.
